new service related changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-server.port = 8763
+server.port = 8008
 eureka.client.register-with-eureka = false
 eureka.client.fetch-registry = false
+eureka.client.serviceUrl.defaultZone: http://localhost:${server.port}/eureka/
+eureka.instance.hostname=my-eureka-server.com
+spring.application.name=eureka-server
