--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ eureka.client.fetch-registry = false
 eureka.client.serviceUrl.defaultZone: http://localhost:${server.port}/eureka/
 eureka.instance.hostname=my-eureka-server.com
 spring.application.name=eureka-server
+
+
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration, org.springframework.boot.autoconfigure.jdbc.DataSourceTransactionManagerAutoConfiguration
