eureka server changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-server.port = 8008
+server.port = 8761
 eureka.client.register-with-eureka = false
 eureka.client.fetch-registry = false
-eureka.client.serviceUrl.defaultZone: http://localhost:${server.port}/eureka/
-eureka.instance.hostname=my-eureka-server.com
+#eureka.client.serviceUrl.defaultZone: http://localhost:${server.port}/eureka/
 spring.application.name=eureka-server
 
 
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration, org.springframework.boot.autoconfigure.jdbc.DataSourceTransactionManagerAutoConfiguration
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration, org.springframework.boot.autoconfigure.jdbc.DataSourceTransactionManagerAutoConfiguration
+#spring.security.user.password=ENC($2a$12$moqaGXinnOcsy5Uci/G2cufGaDJhEtGJPOyrIN4R3Rt.58zfbB87m)
+#spring.security.user.name=test
+logging.level.org.springframework.security=DEBUG
